kustomize/apps/portal/middlewares.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  name: strip-prefix-portal-landing
  namespace: vms
spec:
  stripPrefix:
    prefixes:
      - /portal/landing
    forceSlash: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  name: strip-prefix-portal-stub
  namespace: vms
spec:
  stripPrefix:
    prefixes:
      - /portal-stub
    forceSlash: false
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  name: strip-prefix-portal
  namespace: vms
spec:
  stripPrefix:
    prefixes:
      - /portal
    forceSlash: true
