kustomize/apps/portal/deployments-landing.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: portal-landing
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: vms
    global-app-name: vsaas
  name: portal-landing
  namespace: vms
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: portal-landing
      app.kubernetes.io/component: frontend
      app.kubernetes.io/part-of: vms
      global-app-name: vsaas
  template:
    metadata:
      labels:
        app.kubernetes.io/name: portal-landing
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: vms
        global-app-name: vsaas
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: portal-landing
                  app.kubernetes.io/component: frontend
                  app.kubernetes.io/part-of: vms
                  global-app-name: vsaas
              topologyKey: kubernetes.io/hostname
      containers:
        - name: portal-landing
          image: download.aipix.ai:8443/vsaas-vms/portal-landing/release:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 80
            periodSeconds: 5
          resources:
            requests:
              cpu: 5m
              memory: 25Mi
          volumeMounts:
          - mountPath: /etc/nginx/nginx.conf
            name: portal-landing-nginx
            readOnly: true
            subPath: nginx.conf
          - mountPath: /etc/nginx/conf.d/default.conf
            name: portal-landing-nginx
            readOnly: true
            subPath: default.conf
      imagePullSecrets:
        - name: download-aipix-ai
      hostname: portal-landing
      restartPolicy: Always
      volumes:
      - name: portal-landing-nginx
        configMap:
          name: portal-landing-nginx
