kustomize/apps/portal/deployments-stub.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: portal-stub
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: vms
    global-app-name: vsaas
  name: portal-stub
  namespace: vms
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: portal-stub
      app.kubernetes.io/component: backend
      app.kubernetes.io/part-of: vms
      global-app-name: vsaas
  template:
    metadata:
      labels:
        app.kubernetes.io/name: portal-stub
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: vms
        global-app-name: vsaas
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: portal-stub
                  app.kubernetes.io/component: backend
                  app.kubernetes.io/part-of: vms
                  global-app-name: vsaas
              topologyKey: kubernetes.io/hostname
      containers:
        - name: portal-stub
          args:
            - php
            - /var/www/api/artisan
            - octane:start
            - --port=8080
            - --host=0.0.0.0
            - --task-workers=2
            - --max-requests=1000
          image: download.aipix.ai:8443/vsaas-vms/portal-stub/release:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: portal-stub-public
              mountPath: /var/www/api/public/
          resources:
            requests:
              cpu: 5m
              memory: 120Mi
      imagePullSecrets:
        - name: download-aipix-ai
      hostname: portal-stub
      restartPolicy: Always
      volumes:
        - name: portal-stub-public
          emptyDir: {}
