kustomize/apps/portal/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: portal-backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: vms
    global-app-name: vsaas
  name: portal-backend
  namespace: vms
spec:
  ports:
    - name: "http"
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: portal-backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: vms
    global-app-name: vsaas

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: portal-frontend-client
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: vms
    global-app-name: vsaas
  name: portal-frontend-client
  namespace: vms
spec:
  ports:
    - name: "http"
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/name: portal-frontend-client
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: vms
    global-app-name: vsaas

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: portal-stub
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: vms
    global-app-name: vsaas
  name: portal-stub
  namespace: vms
spec:
  ports:
    - name: "http"
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: portal-stub
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: vms
    global-app-name: vsaas
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: portal-landing
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: vms
    global-app-name: vsaas
  name: portal-landing
  namespace: vms
spec:
  ports:
    - name: "http"
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/name: portal-landing
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: vms
    global-app-name: vsaas
